[package]
name = "mm_ptr"
version = "0.1.2"
edition = "2021"

authors = ["lino <lino_snsalias@outlook.com>"]
description = "Smart pointers implementing abs_mm"
repository = "https://github.com/ljsnogard/mm_ptr"
keywords = ["pointer", "alloc"]
categories = ["no-std"]
license = "MIT/Apache-2.0"
readme = "README.md"

[dependencies]
abs_mm = { git = "https://github.com/ljsnogard/abs_mm.git", branch = "dev/0.1.2" }
atomex = { git = "https://github.com/ljsnogard/atomex-rs.git", branch = "dev/0.1.1" }

[dev-dependencies]
core_malloc = { git = "https://github.com/ljsnogard/core_malloc.git", branch = "dev/0.1.2" }

log = { version = "0.4.*" }
env_logger = { version = "0.11.*" }