[package]
name = "mm_ptr"
version = "0.1.3"
edition = "2024"

authors = ["lino <lino_snsalias@outlook.com>"]
description = "Smart pointers implementing abs_mm"
repository = "https://github.com/ljsnogard/mm_ptr"
keywords = ["pointer", "alloc"]
categories = ["no-std"]
license = "MIT/Apache-2.0"
readme = "README.md"

[dependencies]
abs_mm = { version = "0.1.2" }
anylr = { version = "0.1.0" }
atomex = { version = "0.1.1" }
